@@ -7,12 +7,11 @@ import cn.hutool.core.util.ReflectUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.http.HttpRequest;
 import cn.hutool.http.HttpResponse;
-import lombok.SneakyThrows;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.util.StringUtils;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import jakarta.servlet.http.HttpServletRequest;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
@@ -21,42 +20,40 @@ import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 /**
- * HTTP 工具类
+ * HTTP tools
  *
- * @author 芋道源码
+ * @author Yudao Source Code
  */
 public class HttpUtils {
 
     /**
-     * 编码 URL 参数
+     * Encode URL parameters
      *
-     * @param value 参数
-     * @return 编码后的参数
+     * @param value parameters
+     * @return encoded parameters
      */
-    @SneakyThrows
     public static String encodeUtf8(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
     /**
-     * 解码 URL 参数
+     * Decode URL parameters
      *
-     * @param value 参数
-     * @return 解码后的参数
+     * @param value parameters
+     * @return Decoded parameters
      */
-    @SneakyThrows
     public static String decodeUtf8(String value) {
-        return URLDecoder.decode(value, StandardCharsets.UTF_8.name());
+        return URLDecoder.decode(value, StandardCharsets.UTF_8);
     }
 
     @SuppressWarnings("unchecked")
     public static String replaceUrlQuery(String url, String key, String value) {
         UrlBuilder builder = UrlBuilder.of(url, Charset.defaultCharset());
-        // 先移除
+        // Remove first
         TableMap<CharSequence, CharSequence> query = (TableMap<CharSequence, CharSequence>)
                 ReflectUtil.getFieldValue(builder.getQuery(), "query");
         query.remove(key);
-        // 后添加
+        // added after
         builder.addQuery(key, value);
         return builder.build();
     }
@@ -66,22 +63,22 @@ public class HttpUtils {
             return url;
         }
         UrlBuilder builder = UrlBuilder.of(url, Charset.defaultCharset());
-        // 移除 query、fragment
+        // Remove query, fragment
         builder.setQuery(null);
         builder.setFragment(null);
         return builder.build();
     }
 
     /**
-     * 拼接 URL
+     * Splicing URLs
      *
-     * copy from Spring Security OAuth2 的 AuthorizationEndpoint 类的 append 方法
+     * copy from the append method of the AuthorizationEndpoint class of Spring Security OAuth2
      *
-     * @param base 基础 URL
-     * @param query 查询参数
-     * @param keys query 的 key，对应的原本的 key 的映射。例如说 query 里有个 key 是 xx，实际它的 key 是 extra_xx，则通过 keys 里添加这个映射
-     * @param fragment URL 的 fragment，即拼接到 # 中
-     * @return 拼接后的 URL
+     * @param base Base URL
+     * @param query query parameters
+     * @param keys The key of query corresponds to the mapping of the original key. For example, if there is a key in the query that is xx, but its actual key is extra_xx, then add this mapping through keys.
+     * @param fragment URL fragment, that is, spliced into #
+     * @return Concatenated URL
      */
     public static String append(String base, Map<String, ?> query, Map<String, String> keys, boolean fragment) {
         UriComponentsBuilder template = UriComponentsBuilder.newInstance();
@@ -137,20 +134,20 @@ public class HttpUtils {
     public static String[] obtainBasicAuthorization(HttpServletRequest request) {
         String clientId;
         String clientSecret;
-        // 先从 Header 中获取
+        // Get it from Header first
         String authorization = request.getHeader("Authorization");
         authorization = StrUtil.subAfter(authorization, "Basic ", true);
         if (StringUtils.hasText(authorization)) {
             authorization = Base64.decodeStr(authorization);
             clientId = StrUtil.subBefore(authorization, ":", false);
             clientSecret = StrUtil.subAfter(authorization, ":", false);
-            // 再从 Param 中获取
+            // Then get it from Param
         } else {
             clientId = request.getParameter("client_id");
             clientSecret = request.getParameter("client_secret");
         }
 
-        // 如果两者非空，则返回
+        // If both are non-empty, return
         if (StrUtil.isNotEmpty(clientId) && StrUtil.isNotEmpty(clientSecret)) {
             return new String[]{clientId, clientSecret};
         }
@@ -158,14 +155,14 @@ public class HttpUtils {
     }
 
     /**
-     * HTTP post 请求，基于 {@link cn.hutool.http.HttpUtil} 实现
+     * HTTP post request, implemented based on {@link cn.hutool.http.HttpUtil}
      *
-     * 为什么要封装该方法，因为 HttpUtil 默认封装的方法，没有允许传递 headers 参数
+     * Why should this method be encapsulated? Because the method encapsulated by HttpUtil by default does not allow passing headers parameters.
      *
      * @param url URL
-     * @param headers 请求头
-     * @param requestBody 请求体
-     * @return 请求结果
+     * @param headers Request Header
+     * @param requestBody Request body
+     * @return Request result
      */
     public static String post(String url, Map<String, String> headers, String requestBody) {
         try (HttpResponse response = HttpRequest.post(url)
@@ -177,13 +174,13 @@ public class HttpUtils {
     }
 
     /**
-     * HTTP get 请求，基于 {@link cn.hutool.http.HttpUtil} 实现
+     * HTTP get request, implemented based on {@link cn.hutool.http.HttpUtil}
      *
-     * 为什么要封装该方法，因为 HttpUtil 默认封装的方法，没有允许传递 headers 参数
+     * Why should this method be encapsulated? Because the method encapsulated by HttpUtil by default does not allow passing headers parameters.
      *
      * @param url URL
-     * @param headers 请求头
-     * @return 请求结果
+     * @param headers Request Header
+     * @return Request result
      */
     public static String get(String url, Map<String, String> headers) {
         try (HttpResponse response = HttpRequest.get(url)
